--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 * {
     box-sizing: border-box;
 }
@@ -7,24 +10,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Style the main-header */
-.main-header {
-    background-color: #f1f1f1;
-    padding-top: 50px;
-    text-align: center;
-    overflow: hidden;
-}
-
-.main-header img {
-    width: 100%;
-    height: 100%;
-    max-height: 640px;
-    object-fit: cover;
-}
 
 
+/*  Main Navigation Bar */
 .main-navbar {
-    background-color: #f1f1f1;
+    background-color:#002fa7;
     font-weight: bold;
     font-size: 14pt;
     overflow: hidden;
@@ -33,7 +23,7 @@ body {
 }
 
 .main-navbar a {
-    color:darkslategrey;
+    color:white;
     float: left;
     padding: 12px 24px;
     text-align: center;
@@ -41,16 +31,62 @@ body {
 }
 
 .main-navbar a:hover {
-    background-color: brown;
-    color: whitesmoke;
+    background-color: green;
+    color: orange;
     animation-delay: 0.4s;
 }
 
 
 
-
-.row {
+/* Style the main-header */
+.main-header {
+    background-color: #f1f1f1;
+    color:#002fa7;
+    padding-top: 49px;
+    text-align: center;
     overflow: hidden;
+}
+
+.main-header img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    max-height: 640px;
+    object-fit: cover;
+    margin-left: auto;
+    margin-right: auto;
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn{
+    0%  { 
+        opacity: 0.25; 
+        width: 25%;
+        height: 50%;
+    }
+    100%    { 
+        opacity: 1; 
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+.main-body {
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
 }
 
 
