--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body {
 }
 
 .main-navbar a:hover {
-    background-color: green;
-    color: orange;
+    background-color: orange;
+    color:  #002fa7;
     animation-delay: 0.4s;
 }
 
@@ -40,11 +40,10 @@ body {
 
 /* Style the main-header */
 .main-header {
-    background-color: #f1f1f1;
-    color:#002fa7;
-    padding-top: 49px;
+    background-color: #f0f0f0;
     text-align: center;
     overflow: hidden;
+    padding-top: 49px;
 }
 
 .main-header img {
@@ -57,14 +56,14 @@ body {
     object-fit: cover;
     margin-left: auto;
     margin-right: auto;
-    animation: fadeIn 2s;
+    animation: fadeIn 0.5s;
 }
 
 @keyframes fadeIn{
     0%  { 
         opacity: 0.25; 
         width: 25%;
-        height: 50%;
+        height: 100%;
     }
     100%    { 
         opacity: 1; 
@@ -81,13 +80,49 @@ body {
 
 
 
-
 .main-body {
-    overflow: hidden;
+    overflow:   hidden;
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
+    max-width: 720px;
 }
+
+
+.Committees-Table-Container{
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+}
+
+table{
+    width: 100%;
+}
+
+td{
+    text-align: center;
+}
+
+.main-body.Sponsor{
+    color:yellow;
+}
+
+
+
+
+
+
+.separator {
+    border-style: ridge;
+    color: greenyellow;
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+
+
 
 
 
