--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,7 @@ body {
 .main-header {
     background-color: #f0f0f0;
     text-align: center;
-    overflow: hidden;
-    padding-top: 49px;
+    overflow: auto;
 }
 
 .main-header img {
@@ -85,6 +84,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 720px;
+    width: auto;
 }
 
 
