--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,38 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+header{
+    background-image: url(images/header/ucc-college.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-color: #FACABC;
+    background-position: center;
+    display: block;
+    width: 100%;
+}
 
+header::after {
+    content: '';
+    display: table;
+    clear:both;
+}
 
 /*  Main Navigation Bar */
 .main-navbar {
     background-color:#002fa7;
+    font-size: 14px;
     font-weight: bold;
-    font-size: 14pt;
-    overflow: hidden;
-    position: fixed;
     width: 100%;
+    display: block;
+    float:inline-start;
+    position: fixed;
 }
 
 .main-navbar a {
     color:white;
     float: left;
-    padding: 12px 24px;
+    padding: 12px 16px;
+    font-size: 14pt;
     text-align: center;
     text-decoration: none;
 }
@@ -55,6 +71,8 @@ body {
     object-fit: cover;
     margin-left: auto;
     margin-right: auto;
+    position:static;
+    margin-top: 49px;
     animation: fadeIn 0.5s;
 }
 
@@ -85,6 +103,7 @@ body {
     margin-right: auto;
     max-width: 720px;
     width: auto;
+    padding: 24px;
 }
 
 
