--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     margin: 0;
+    padding:0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -14,10 +15,13 @@ header{
     background-image: url(images/header/ucc-college.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    background-color: #FACABC;
+    background-color: #f0f0f0;
     background-position: center;
     display: block;
     width: 100%;
+    padding:0%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header::after {
@@ -31,9 +35,10 @@ header::after {
     background-color:#002fa7;
     font-size: 14px;
     font-weight: bold;
+    height: 50px;
     width: 100%;
     display: block;
-    float:inline-start;
+    float:inline-end;
     position: fixed;
 }
 
@@ -72,15 +77,15 @@ header::after {
     margin-left: auto;
     margin-right: auto;
     position:static;
-    margin-top: 49px;
-    animation: fadeIn 0.5s;
+    margin-top: 50px;
+    animation: fadeIn 2s;
 }
 
 @keyframes fadeIn{
     0%  { 
         opacity: 0.25; 
-        width: 25%;
-        height: 100%;
+        width: 0%;
+        height: 0%;
     }
     100%    { 
         opacity: 1; 
