--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,13 @@ header::after {
 
 
 
-
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 1600,
+  'GRAD' 0,
+  'opsz' 64
+}
 
 
 
